Modified pom.xml so it build with Java 11 and has additional plugins