@@ -7,29 +7,66 @@
   <version>1.0-SNAPSHOT</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
+  
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.11</version>
+        <scope>test</scope>
     </dependency>
   </dependencies>
+  
   <build>
     <plugins>
       <plugin>
-        <!-- Build an executable JAR -->
+        <!-- seperate compiler plugin for Java 11+ -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+            <release>11</release>
+        </configuration>
+      </plugin>
+      <plugin>
+        <!-- unit test plugin -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.0</version>
+        <configuration>
+            <!-- allow all reflection access for third party libraries -->
+            <argLine>
+                --illegal-access=permit
+            </argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <!-- integration test plugin -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+            <argLine>
+                <!-- allow all reflection access for third party libraries -->
+                --illegal-access=permit
+            </argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <!-- build an executable JAR -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.0.2</version>
+        <version>3.2.0</version>
         <configuration>
-          <archive>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>com.mycompany.app.App</mainClass>
-            </manifest>
-          </archive>
+            <source>1.11</source>
+            <target>1.11</target>
+            <archive>
+                <manifest>
+                    <addClasspath>true</addClasspath>
+                    <classpathPrefix>lib/</classpathPrefix>
+                    <mainClass>com.mycompany.app.App</mainClass>
+                </manifest>
+            </archive>
         </configuration>
       </plugin>
     </plugins>
